--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8.52.0"
